--- a/index.html
+++ b/index.html
@@ -2,31 +2,66 @@
     1. Install vscode extension Name: open in `browser open-in-browser` by TechER
     2. Right click html file and either run in default browser or another browser
   -->
-
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML/CSS Studio</title>
-    <!-- import CSS styles -->
-    <link rel="stylesheet" href="styles.css" /> 
-  </head>
-
-  <!-- page content goes into <body> -->
-  <body>
-    <div id="logoBar">
-      <h1>Welcome to 100 Acre Wood!</h1>
-      <img id="siteLogo" alt="Pooh-bear site logo" src="./assets/Header.png"/>
-      <h3>We're glad you're here :D</h3>
-    </div>
-    <hr/>
-    <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
-    </div>
-  </body>
-
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>HTML/CSS Studio</title>
+      <!-- import CSS styles -->
+      <link rel="stylesheet" href="styles.css" /> 
+    </head>
+  
+    <!-- page content goes into <body> -->
+    <body>
+      <div id="logoBar">
+        <h1 style="color:#C39BD3;"> Welcome to 100 Acre Wood!</h1>
+        <img id="siteLogo" alt="Pooh-bear site logo" src="./assets/Header.png"/>
+        <h3 style="font-family: Lucida Handwriting, cursive; color: #C39BD3; font-size: 30px;"> We're glad you're here :D</h3>
+      </div>
+      <hr/>
+      <div id="staffGallery">
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt="Eeyore the donkey rolling on his back">
+          <p class="characterName"> Eeyoere</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Kanga-Roo.png" alt="Kanga with Roo in her pouch">
+          <p class="characterName"> Kanga</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Owl-Phone.png" alt="Mr. Owl holding a phone with his claw">
+          <p class="characterName"> Mr. Owl</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Piglet-Flower.png" alt="Piglet holding a flower">
+          <p class="characterName"> Piglet</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage"  src="./assets/Pooh-Jess.png"  alt="Winnie the Pooh holding a pink balloon">
+          <p class="characterName"> Pooh Bear</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Rabbit-Flower.png"  alt="Mr. Rabbit looking down at a pink flower">
+          <p class="characterName"> Mr. Rabbit</p>
+        </div>
+  
+        <div class="card">
+          <img class="galleryImage" src="./assets/Roo-Jump.png"  alt="Roo jumping in the air">
+          <p class="characterName"> Roo</p>
+        </div>
+        
+        <div class="card">
+          <img class="galleryImage" src="./assets/Tigger-Jump.png"  alt="Tigger jumping in the air">
+          <p class="characterName"> Tigger</p>
+        </div>
+        
+      </div>
+    </body>
+  
+  </html>
